--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ input::-webkit-inner-spin-button {
 
 body {
     font-family: 'B612 Mono', monospace;
-    background: radial-gradient(#ffffff, #0b7bd6);
+    background: white;
     width: 500px;
     height: 300px;
 }
@@ -34,6 +34,10 @@ div {
     align-items: center;
 }
 
+h2 {
+    font-size: 1rem;
+}
+
 /* Title Styles */
 h1 {
     font-size: 1.5rem;
@@ -45,13 +49,35 @@ h1 {
     width: 100%;
     height: 100%;
     display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
     padding: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.color {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-weight: 600;
+    line-height: 3rem;
+    color: black;
+    flex-direction: column;
+}
+
+#color-1 {
+    background-color: #ffffff;
 }
 
 /* Input Styles */
 #num-colors {
-    background-color: rgba(117, 174, 255, 0.5);
+    background-color: white;
     border: 2px solid black;
     border-radius: 20px;
     margin-right: 1rem;
@@ -63,10 +89,11 @@ h1 {
     padding: 0.5rem;
     font-weight: 600;
     color: black;
+    transition: 0.5s;
 }
 
 #gen-pal {
-    background-color: rgba(117, 174, 255, 0.5);
+    background-color: white;
     border: 2px solid black;
     border-radius: 20px;
     display: flex;
@@ -77,8 +104,10 @@ h1 {
     padding: 0.5rem;
     font-weight: 600;
     color: black;
+    transition: 0.5s;
 }
 
 #gen-pal:hover {
     cursor: pointer;
+    scale: 1.1;
 }
